refactor: use lambdas and fixes